--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^11.10.0",
     "next": "15.3.3",
     "postcss": "^8.5.6",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
